--- a/courses.html
+++ b/courses.html
@@ -23,7 +23,7 @@
               <a href="index.php">
                 <div class="logo_text">
                   <a href="index.html">
-                    <img src=<?php echo get_template_uri(); ?>"images/logo_big.png" />
+                    <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/logo_big.png" />
                     <span>Samurai University</span>
                   </a>
                 </div>
@@ -93,7 +93,7 @@
                 <div class="col-lg-4 course_col">
                   <div class="course">
                     <div class="course_image">
-                      <img src=<?php echo get_template_uri(); ?>"images/PIC6-3.jpg" alt="" />
+                      <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/PIC6-3.jpg" alt="" />
                     </div>
                     <div class="course_body">
                       <h3 class="course_title">
@@ -115,7 +115,7 @@
                 <div class="col-lg-4 course_col">
                   <div class="course">
                     <div class="course_image">
-                      <img src=<?php echo get_template_uri(); ?>"images/pic6-1.jpg" alt="" />
+                      <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/pic6-1.jpg" alt="" />
                     </div>
                     <div class="course_body">
                       <h3 class="course_title">
@@ -138,7 +138,7 @@
                 <div class="col-lg-4 course_col">
                   <div class="course">
                     <div class="course_image">
-                      <img src=<?php echo get_template_uri(); ?>"images/PIC6-4.jpg" alt="" />
+                      <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/PIC6-4.jpg" alt="" />
                     </div>
                     <div class="course_body">
                       <h3 class="course_title">
@@ -170,7 +170,7 @@
               <div class="col-lg-4 footer_col">
                 <div class="footer_section footer_about">
                   <div class="footer_logo_container">
-                    <img src=<?php echo get_template_uri(); ?>"images/logo_big.png" alt="" />
+                    <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/logo_big.png" alt="" />
                     <a href="">
                       <div class="footer_logo_text">Samurai University</div>
                     </a>
