--- a/courses_detail.html
+++ b/courses_detail.html
@@ -23,7 +23,7 @@
               <a href="index.php">
                 <div class="logo_text">
                   <a href="index.html">
-                    <img src=<?php echo get_template_uri(); ?>"images/logo_big.png" />
+                    <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/logo_big.png" />
                     <span>Samurai University</span>
                   </a>
                 </div>
@@ -95,19 +95,19 @@
                 <div class="tab_panel_header">
                 </div>
                 <div class="tab_panel_content">
-                  <div class="course_image"><img src=<?php echo get_template_uri(); ?>"images/PIC6-3.jpg" alt=""></div>
+                  <div class="course_image"><img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/PIC6-3.jpg" alt=""></div>
                   <div class="tab_panel_text">
                     <p>
                       広い視野とコミュニケーションスキルを持つ、世界に通用する教育者を育成します。
                     </p>
                   </div>
                   <div class="campus_footer_content d-flex flex-row align-items-center justify-content-start">
-                    <img src=<?php echo get_template_uri(); ?>"images/clock.png"><span>2019/4/23</span>
+                    <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/clock.png"><span>2019/4/23</span>
                   </div>
                   <hr>
                   <div class="social_share">
-                    <img src=<?php echo get_template_uri(); ?>"images/facebook-square-brands.png" alt="">
-                    <img src=<?php echo get_template_uri(); ?>"images/twitter-square-brands.png" alt="">
+                    <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/facebook-square-brands.png" alt="">
+                    <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/twitter-square-brands.png" alt="">
                   </div>
                 </div>
               </div>
@@ -158,7 +158,7 @@
               <div class="col-lg-4 footer_col">
                 <div class="footer_section footer_about">
                   <div class="footer_logo_container">
-                    <img src=<?php echo get_template_uri(); ?>"images/logo_big.png" alt="" />
+                    <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/logo_big.png" alt="" />
                     <a href="">
                       <div class="footer_logo_text">Samurai University</div>
                     </a>
