--- a/events_detail.html
+++ b/events_detail.html
@@ -23,7 +23,7 @@
               <a href="index.php">
                 <div class="logo_text">
                   <a href="index.html">
-                    <img src=<?php echo get_template_uri(); ?>"images/logo_big.png" />
+                    <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/logo_big.png" />
                     <span>Samurai University</span>
                   </a>
                 </div>
@@ -109,18 +109,18 @@
                         </div>
                         <div class="col-lg-10 col-md-10 col-sx-12">
                           <div class="news_post_small_header">
-                            <img src=<?php echo get_template_uri(); ?>"images/tags-solid.png" alt="" /> NEWS
+                            <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/tags-solid.png" alt="" /> NEWS
                           </div>
                           <div class="news_detail_title">
                             AWSハンズオンセミナー
                           </div>
                           <div class="news_time">
                             <div>
-                              <img src=<?php echo get_template_uri(); ?>"images/clock-regular.png" alt="" />
+                              <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/clock-regular.png" alt="" />
                               <span>日付：2019年08月18日</span>
                             </div>
                             <div>
-                              <img src=<?php echo get_template_uri(); ?>"images/yen-sign-solid.png" alt="" />
+                              <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/yen-sign-solid.png" alt="" />
                               <span>参加費：無料</span>
                             </div>
                           </div>
@@ -130,8 +130,8 @@
 
                           <hr />
                           <div class="social_share">
-                            <img src=<?php echo get_template_uri(); ?>"images/facebook-square-brands.png" alt="" />
-                            <img src=<?php echo get_template_uri(); ?>"images/twitter-square-brands.png" alt="" />
+                            <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/facebook-square-brands.png" alt="" />
+                            <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/twitter-square-brands.png" alt="" />
                           </div>
                         </div>
                       </div>
@@ -185,7 +185,7 @@
               <div class="col-lg-4 footer_col">
                 <div class="footer_section footer_about">
                   <div class="footer_logo_container">
-                    <img src=<?php echo get_template_uri(); ?>"images/logo_big.png" alt="" />
+                    <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/logo_big.png" alt="" />
                     <a href="">
                       <div class="footer_logo_text">Samurai University</div>
                     </a>
