--- a/news_detail.html
+++ b/news_detail.html
@@ -23,7 +23,7 @@
               <a href="index.php">
                 <div class="logo_text">
                   <a href="index.html">
-                    <img src=<?php echo get_template_uri(); ?>"images/logo_big.png" />
+                    <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/logo_big.png" />
                     <span>Samurai University</span>
                   </a>
                 </div>
@@ -108,7 +108,7 @@
                         </div>
                         <div class="col-lg-10 col-md-10 col-sx-12">
                           <div class="news_post_small_header">
-                            <img src=<?php echo get_template_uri(); ?>"images/tags-solid.png" alt="" /> NEWS
+                            <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/tags-solid.png" alt="" /> NEWS
                           </div>
                           <div class="news_detail_title">
                             卒業式
@@ -119,8 +119,8 @@
 
                           <hr />
                           <div class="social_share">
-                            <img src=<?php echo get_template_uri(); ?>"images/facebook-square-brands.png" alt="" />
-                            <img src=<?php echo get_template_uri(); ?>"images/twitter-square-brands.png" alt="" />
+                            <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/facebook-square-brands.png" alt="" />
+                            <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/twitter-square-brands.png" alt="" />
                           </div>
                         </div>
                       </div>
@@ -174,7 +174,7 @@
               <div class="col-lg-4 footer_col">
                 <div class="footer_section footer_about">
                   <div class="footer_logo_container">
-                    <img src=<?php echo get_template_uri(); ?>"images/logo_big.png" alt="" />
+                    <img src="<?php echo get_template_directory_uri(); ?><?php echo get_template_uri(); ?>"images/logo_big.png" alt="" />
                     <a href="">
                       <div class="footer_logo_text">Samurai University</div>
                     </a>
